--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     },
     "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
         "phpunit/phpunit": "^11.4"
