--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,8 @@
 {
-    "name": "boutmad/Password-generator",
+    "name": "boutmad/randompassword",
     "description": "A package for generating random passwords",
     "type": "library",
-    "autoload": {
-        "psr-4": {
-            "RandomPasswordGenerator\\": "src/"
-        }
-    },
+    "license": "MIT",
     "minimum-stability": "stable",
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require-dev": {
-        "phpunit/phpunit": "^11.4"
-    }
+    "require": {}
 }
