--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,11 @@
     "type": "library",
     "license": "MIT",
     "minimum-stability": "stable",
+     "autoload": {
+        "psr-4": {
+            "boutmad\\randompassword\\": "src/"
+        },
+       
+    },
     "require": {}
 }
